[project]
name = "AutoGACOS"
authors = [{name = "Fancy", email = "fanchengyan@outlook.com"}]
description = "A Python library for automatically submitting and downloading GACOS data"
version = "0.1.0"
requires-python = ">=3.6"
dependencies = [
    "data_downloader",
    "faninsar",
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["GACOS", "data", "downloader"]


[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
Homepage = "https://github.com/Fanchengyan/AutoGACOS"
Repository = "https://github.com/Fanchengyan/AutoGACOS"
